# applied-ml-case-studies

./: .gitignore  README.md  pyproject.toml  requirements.txt  wmft_model.joblib
configs/: medium.yaml  small.yaml  tiny.yaml
ml-boston-climate-modeler/: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
ml-boston-climate-modeler/reports/: README.md  metrics.json  models.json
ml-boston-climate-modeler/src/climate_modeling/: models.py  train.py
ml-boston-climate-modeler/tests/: test_data.py  test_models.py  test_pipeline.py
ml-model-compression/: .gitignore  README.md  requirements.txt
ml-model-compression/reports/: results.json  results_summary.md
ml-model-compression/scripts/: 01_pruning.py  02_quantization.py  03_distillation.py
ml-model-compression/src/: benchmark.py  eval_utils.py  paths.py  student_model.py
ml-wearable-motion-classifier/: README.md
ml-wearable-motion-classifier/examples/: manifest.example.csv
reports/: results_summary.md
scripts/: 06_keras_vs_pytorch_cnn_comparison.py  09_final_cnn_vit_evaluation.py  augment_real_data.py  benchmark.py  download_tinystories.py  evaluate.py  evaluate_grouped_cv.py  generate.py  plot_loss.py  prepare_dataset.py  smoke_test.py  train.py  train_model.py  train_tokenizer.py
tests/: test_attention.py  test_cli.py  test_model.py  test_models.py  test_preprocessing.py  test_quaternion.py  test_rules.py  test_sample_pipeline.py  test_tokenizer.py  test_visualize.py
tinyllm/: attention.py  dataset.py  generation.py  model.py  tokenizer.py  transformer.py  utils.py
(+19 files in other folders)
