[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ml-climate-modeling"
version = "0.1.0"
description = "Dependency-free Python ML pipeline for modeling Boston-area daily climate patterns from NOAA station data."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["machine-learning", "weather", "climate", "time-series", "ridge-regression"]
dependencies = []

[project.scripts]
climate-model = "climate_modeling.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
